src/objects/Generate_Potential_Target__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Course_Creator</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <externalId>true</externalId>
        <label>Action</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adoption_Type__c</fullName>
        <description>created for mapping</description>
        <formula>TEXT(Course__r.Adoption_Type__c)</formula>
        <label>Adoption Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <formula>Product__r.Author__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Author</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catalog_Code_Course_Name__c</fullName>
        <formula>Course__r.Catalog_Code__c &amp;  Course__r.Name</formula>
        <label>Catalog Code/ Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copyright_Year__c</fullName>
        <formula>Product__r.Copyright_Year__c</formula>
        <label>Copyright Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>UniversityCourse__c</referenceTo>
        <relationshipName>Course</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fall_Frontlist__c</fullName>
        <formula>Course__r.Fall_Front_List__c</formula>
        <label>Fall Frontlist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fall__c</fullName>
        <formula>Course__r.Fall_Enrollment__c</formula>
        <label>Fall</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Edition_Currency__c</fullName>
        <formula>Text(Product__r.Next_Edition__r.CurrencyIsoCode)</formula>
        <label>Next Edition Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Edition__c</fullName>
        <formula>Product__r.Next_Edition__r.Id</formula>
        <label>Next Edition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rollover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Takeaway</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCC_c__c</fullName>
        <label>PCC(Primary)+Pearson CourseName(Primary)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Selling_Account__c</fullName>
        <formula>Course__r.Primary_Selling_Account__c</formula>
        <label>Primary Selling Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_In_Use_Publisher__c</fullName>
        <label>Product In Use Publisher</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_In_Use__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product In Use</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>Potential_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Generate_Potential_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <formula>Product__r.Publisher__c</formula>
        <label>Publisher</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selling_Period_Course_Name__c</fullName>
        <label>Selling Period+Course Name</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Spring_Frontlist__c</fullName>
        <formula>Course__r.Spring_Front_List__c</formula>
        <label>Spring Frontlist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spring__c</fullName>
        <formula>Course__r.Spring_Enrollment__c</formula>
        <label>Spring</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summer__c</fullName>
        <description>Created for mapping</description>
        <formula>Course__r.Summer_Enrollment__c</formula>
        <label>Summer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TakeAway_Multiple_Frontlist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TakeAway Multiple Frontlist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TakeAway_Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Family</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Potential Targets (Product Family)</relationshipLabel>
        <relationshipName>Potential_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Winter__c</fullName>
        <description>created for mapping</description>
        <formula>Course__r.Winter_Enrollment__c</formula>
        <label>Winter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Potential Target</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Action__c</columns>
        <columns>Status__c</columns>
        <columns>Processed__c</columns>
        <columns>Primary_Selling_Account__c</columns>
        <columns>Account__c</columns>
        <columns>Course__c</columns>
        <columns>Fall__c</columns>
        <columns>Spring__c</columns>
        <columns>Author__c</columns>
        <columns>Product_In_Use__c</columns>
        <columns>Copyright_Year__c</columns>
        <columns>Publisher__c</columns>
        <columns>Opportunity_Type__c</columns>
        <columns>PCC_c__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Existing_Business_Opportunity</fullName>
        <columns>NAME</columns>
        <columns>Action__c</columns>
        <columns>Status__c</columns>
        <columns>Processed__c</columns>
        <columns>Primary_Selling_Account__c</columns>
        <columns>Account__c</columns>
        <columns>Course__c</columns>
        <columns>PCC_c__c</columns>
        <columns>Fall__c</columns>
        <columns>Spring__c</columns>
        <columns>Author__c</columns>
        <columns>Product_In_Use__c</columns>
        <columns>Copyright_Year__c</columns>
        <columns>Publisher__c</columns>
        <columns>Opportunity_Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Opportunity_Type__c</field>
            <operation>equals</operation>
            <value>Existing Business</value>
        </filters>
        <label>Existing Business Opportunity</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rollover_Opportunity</fullName>
        <columns>NAME</columns>
        <columns>Action__c</columns>
        <columns>Status__c</columns>
        <columns>Processed__c</columns>
        <columns>Primary_Selling_Account__c</columns>
        <columns>Account__c</columns>
        <columns>Course__c</columns>
        <columns>PCC_c__c</columns>
        <columns>Fall__c</columns>
        <columns>Spring__c</columns>
        <columns>Author__c</columns>
        <columns>Product_In_Use__c</columns>
        <columns>Copyright_Year__c</columns>
        <columns>Publisher__c</columns>
        <columns>Opportunity_Type__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Opportunity_Type__c</field>
            <operation>equals</operation>
            <value>Rollover</value>
        </filters>
        <label>Rollover Opportunity</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Takeaway_Opportunity</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Primary_Selling_Account__c</columns>
        <columns>Account__c</columns>
        <columns>Course__c</columns>
        <columns>PCC_c__c</columns>
        <columns>Fall__c</columns>
        <columns>Spring__c</columns>
        <columns>Author__c</columns>
        <columns>Product_In_Use__c</columns>
        <columns>Copyright_Year__c</columns>
        <columns>Publisher__c</columns>
        <columns>Fall_Frontlist__c</columns>
        <columns>Spring_Frontlist__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Opportunity_Type__c</field>
            <operation>equals</operation>
            <value>Takeaway</value>
        </filters>
        <label>Takeaway Opportunity</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PT-{00000}</displayFormat>
        <label>Potential Target</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potential Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>